--- a/index.html
+++ b/index.html
@@ -39,115 +39,99 @@ SOFTWARE.
     font-size: 14pt;
 }
 </style>
-<script src="jszip.min.js"></script>
 <script src="FileSaver.js"></script>
 <script>
 
 
 function process(){
-    // Read in csv file.
-    var file = document.getElementById('input-file').files[0];
-    var reader = new FileReader();
-    var zip = new JSZip();
-    var zipFolder = zip.folder('salem-edge-files');
+    // Read in input files.
+    var i;
+    for(i = 0; i < document.getElementById('input-files').files.length; i++){
+        var file = document.getElementById('input-files').files[0];
+        if(file.name.endsWith('.rtf')){
+            cleanRTFFile(file);
+        } else {
+            cleanPlainTextFile(file);
+        }
+    }
+}
 
+function cleanPlainTextFile(file){
+    var reader = new FileReader();
     reader.onload = function(e){
         console.log(e);
-        var inputFileData = e.target.result.replace(/\r|\r\n/g, '\n').split('\n');
-        // console.log(inputFileData);
-        // return;
-        var outputDataMap = {}; // To keep data for each of the output files.
-        var allEdgesData = ['Source,Target,Type,Weight,Relationship,Label'];
-        var i, key;
-        for(key in relationshipMap){
-            outputDataMap[relationshipMap[key]] = 
-                ['Source,Target,Type,Weight,Relationship,Label'];
-        }
-        
-        // Process each line, adding in the new data and adding the updated
-        // entry to the corresponding output arrays.
-        for(i = 1; i < inputFileData.length; i++){
-            var cols = inputFileData[i].split(',').slice(0,5);
-            cols[colIndexes.Type] = directedRelationships[cols[colIndexes.Relationship]];
-            cols[colIndexes.Weight] = 1;
-            cols.push(relationshipMap[cols[colIndexes.Relationship]]);
-
-            var entry = cols.join(',');
-            // All edges are added to allEdgesData.
-            allEdgesData.push(entry);
-
-            // If this is one of the relationships we have an output file for,
-            // then we add it to that file, too.
-            if(outputDataMap[cols[colIndexes.Label]] !== undefined){
-                outputDataMap[cols[colIndexes.Label]].push(entry);
+        var lines = e.target.result.replace(/\r|\r\n/g, '\n').split('\n');
+        var output = [];
+        var i = 0;
+        while(i < lines.length){
+            // Read through date block.
+            while(i < lines.length && lines[i].match(/[A-Z][a-z]+ \d+, \d\d\d\d /) === null){
+                i++;
             }
+            while(i < lines.length && lines[i] !== ''){
+                i++;
+            }
+            // Skip the white space after the date.
+            while(i < lines.length && lines[i] === ''){
+                i++;
+            }
+
+            // Add the title to the output (may be multiple lines).
+            while(i < lines.length && lines[i] !== ''){
+                output.push(lines[i]);
+                output.push('\n');
+                i++;
+            }
+            output.push('\n');
+
+            // Read through the beginning of the content.
+            while(i < lines.length && (lines[i].match(/[A-Z]+: /) !== null || lines[i] === '') ){
+                i++;
+            }
+
+            // Add the content until the next blank line.
+            while(i < lines.length && lines[i] !== ''){
+                output.push(lines[i]);
+                output.push('\n');
+                i++;
+            }
+            output.push('\n\n\n\n');
         }
 
-        // Create CSV files in the zip file for each output array.
-        zipFolder.file('all-edges.csv', allEdgesData.join('\n'));
-        for(key in outputDataMap){
-            var filename = key.toLowerCase().replace(/\s/g, '-') +'-edges.csv';
-            zipFolder.file(filename, outputDataMap[key].join('\n'));
-        }
-
-        zip.generateAsync({type:"blob"})
-            .then(function(content) {
-                saveAs(content, "salem-edge-files.zip");
-            });
+        var outputFile = new File(output, file.name.replace(/(\.\w+)$/, function(x){return '-NoMetadata'+x; }), {type: "text/plain;charset=utf-8"});
+        saveAs(outputFile);
     };
     reader.readAsText(file);
 }
 
+function cleanRTFFile(file){
+
+}
 
 </script>
 </head>
 <body>
-<h1>Transform Salem Witch Data</h1>
+<h1>Remove news metadata</h1>
 <p>
-    Select the file you would like to transform and click "Transform".
+    Select the files you would like to remove metadata from.
 </p>
 
 <p id="input-area">
-<input type="file" id="input-file" name="input_file" multiple />
-<button id="process-btn" onclick="process();">Transform</button>
+<input type="file" id="input-files" name="input_files" multiple />
+<button id="process-btn" onclick="process();">Clean</button>
 </p>
 
 
 <h2>Input</h2> 
 <p>
-    The input file should be a comma separated values (CSV) file with at least five columns:
+    A bulk LexusNexus news article file in either rich text format (RTF) or plain text.
 </p>
-<ul>
-    <li>Source (a node id)</li>
-    <li>Target (a node id)</li>
-    <li>Type (directed, undirected, or blank)</li>
-    <li>Weight (a number, can be blank)</li>
-    <li>Relationship (a number where 1=Accuser, 2=Court Official, 3=Hearsay, 4=Witness for, 5=Witness against, 6=Co-accused, and 99=Unknown</li>
-</ul>
 
 <h2>Output</h2>
 <p>
-    The output of this process is a zip file containing the following files:
+    The output looks like the input, but with all non-title metadata removed from the header and footer of each article.
 </p>
-<ul>
-    <li>accuser-edges.csv</li>
-    <li>court-official-edges.csv</li>
-    <li>witness-for-edges.csv</li>
-    <li>co-accused-edges.csv</li>
-    <li>uknown-edges.csv</li>
-    <li>all-edges.csv</li>
-</ul>
-<p>
-Each of these have six columns:
-</p>
-<ul>
-    <li>Source (a node id)</li>
-    <li>Target (a node id)</li>
-    <li>Type (directed, undirected based on the relationship type)</li>
-    <li>Weight (a number&mdash;always 1)</li>
-    <li>Relationship (a number where 1=Accuser, 2=Court Official, 3=Hearsay, 4=Witness for, 5=Witness against, 6=Co-accused, and 99=Unknown</li>
-    <li>Label (the label that corresponds to the relationship value)</li>
-</ul>
+
 
 
 </body>
