--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function process(){
 }
 
 /**
- * Extracts the title and body of news articles from a LexusNexus plain text
+ * Extracts the title and body of news articles from a LexisNexis plain text
  * archive. 
  *
  * @param file The file to parse.
@@ -149,7 +149,7 @@ function cleanPlainTextFile(file, callback){
 }
 
 /**
- * Extracts the title and body of news articles from a LexusNexus RTF archive. 
+ * Extracts the title and body of news articles from a LexisNexis RTF archive. 
  *
  * @param file The file to parse.
  * @param callback The function to pass the extracted text to.
@@ -230,7 +230,7 @@ function cleanRTFFile(file, callback){
 
 <h2>Input</h2> 
 <p>
-    A bulk LexusNexus news article file in either rich text format (RTF) or 
+    A bulk LexisNexis news article file in either rich text format (RTF) or 
     plain text. More than one file may be selected and can be mixed formats
     (some plain text and some RTF files).
 </p>
